--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="https://static.wikia.nocookie.net/mariokart/images/0/02/Mario_Kart_Tour_Mario_%28Chef%29.png/revision/latest?cb=20200804205956">
+    <h3>List of Recipes</h3>
+    <ul>
+        <li><a href="recipes/carbonara.html">Carbonara</a></li>
+        <li><a href="recipes/chicken-parmesan.html">Carbonara</a></li>
+        <li><a href="recipes/risotto.html">Carbonara</a></li>
+    </ul>
 </body>
 </html>
