Insert links to homepage in recipe pages

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h3>List of Recipes</h3>
     <ul>
         <li><a href="recipes/carbonara.html">Carbonara</a></li>
-        <li><a href="recipes/chicken-parmesan.html">Carbonara</a></li>
-        <li><a href="recipes/risotto.html">Carbonara</a></li>
+        <li><a href="recipes/chicken-parmesan.html">Chicken Parmesan</a></li>
+        <li><a href="recipes/risotto.html">Risotto</a></li>
     </ul>
 </body>
 </html>
