--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -33,6 +33,8 @@
         <li>Garnish with parsley and serve.</li>
     </ol>
 
+    <p><a href="../index.html">Homepage</a></p>
+
 
 </body>
 </html>
