--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -36,5 +36,7 @@
         <li>Transfer chicken to baking dish and cover with tomato sauce, mozz, and basil.</li>
         <li>Bake in oven for 15 to 20 minutes.</li>
     </ol>
+
+    <p><a href="../index.html">Homepage</a></p>
 </body>
 </html>
