--- a/recipes/risotto.html
+++ b/recipes/risotto.html
@@ -33,5 +33,7 @@
         <li>Take pot off heat, add butter, and mix until melted.</li>
         <li>Serve risotto in bowls with added parmesan and black pepper.</li>
     </ol>
+
+    <p><a href="../index.html">Homepage</a></p>
 </body>
 </html>
